tests/fail/include_twice.txt
error[E0035]: same file included twice: /included
 --> /INPUT:2:1
  |
2 | include "included"
  | ^^^^^^^^^^^^^^^^^^ same file included twice: /included
  |
 ::: /INPUT:1:1
  |
1 | include "included"
  | ------------------ already included here
